force-app/main/default/objects/Batch_Progress__e/Batch_Progress__e.object-meta.xml
<CustomObject>
    <label>Batch Progress</label>
    <pluralLabel>Batch Progress</pluralLabel>
</CustomObject>