force-app/main/default/objects/Batch_Progress__e/fields/Class_name__c.field-meta.xml
<CustomField>
    <fullName>Class_name__c</fullName>
    <label>Class name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>