force-app/main/default/objects/Batch_Progress__e/fields/DML_type__c.field-meta.xml
<CustomField>
    <fullName>DML_type__c</fullName>
    <label>DML type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>