force-app/main/default/objects/Batch_Progress__e/fields/isSuccess__c.field-meta.xml
<CustomField>
    <fullName>isSuccess__c</fullName>
    <defaultValue>true</defaultValue>
    <label>isSuccess</label>
    <type>Checkbox</type>
</CustomField>