force-app/main/default/objects/Batch_Progress__e/fields/ObjectApiName__c.field-meta.xml
<CustomField>
    <fullName>ObjectApiName__c</fullName>
    <description>Sobject name whose record is processed in batch</description>
    <label>ObjectApiName</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>